--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/main.css" id="color-switcher-link">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="js/vendore/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
         <script src="js/elvendor/html5shiv.min.js"></script>
