--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:400,300,700);
 /*
 ** Table Of Contents
 f
