--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,60 @@
 
     {% include footer.html %}
 
+    <section id="copyright" class="dark_section">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <p>&copy; Copyright 2015 - Dance Studio Template </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+</div><!-- eof #box_wrapper -->
+
+<div class="preloader">
+    <div class="preloader_image"></div>
+</div>
+
+
+        <!-- libraries -->
+        <script src="js/vendore/jquery-1.11.1.min.js"></script>
+        <script src="js/vendore/bootstrap.min.js"></script>
+        <script src="js/vendore/jquery.appear.js"></script>
+
+        <!-- superfish menu  -->
+        <script src="js/vendore/jquery.hoverIntent.js"></script>
+        <script src="js/vendore/superfish.js"></script>
+
+        <!-- page scrolling -->
+        <script src="js/vendore/jquery.easing.1.3.js"></script>
+        <script src='js/vendore/jquery.nicescroll.min.js'></script>
+        <script src="js/vendore/jquery.ui.totop.js"></script>
+        <script src="js/vendore/jquery.localscroll-min.js"></script>
+        <script src="js/vendore/jquery.scrollTo-min.js"></script>
+        <script src='js/vendore/jquery.parallax-1.1.3.js'></script>
+
+        <!-- widgets -->
+        <script src="js/vendore/jquery.easypiechart.min.js"></script><!-- pie charts -->
+        <script src='js/vendore/jquery.countTo.js'></script><!-- digits counting -->
+        <script src="js/vendore/jquery.prettyPhoto.js"></script><!-- lightbox photos -->
+        <script src='js/vendore/jflickrfeed.min.js'></script><!-- flickr -->
+        <script src='twitter/jquery.tweet.min.js'></script><!-- twitter -->
+
+
+        <!-- sliders, filters, carousels -->
+        <script src="js/vendore/jquery.isotope.min.js"></script>
+        <script src='js/vendore/owl.carousel.min.js'></script>
+        <script src='js/vendore/jquery.fractionslider.min.js'></script>
+        <script src='js/vendore/jquery.flexslider-min.js'></script>
+        <script src='js/vendore/jquery.bxslider.min.js'></script>
+
+        <!-- custom scripts -->
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+
   </body>
 
 </html>
