--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:400,300,700);
 /*
 ** Table Of Contents
 f
@@ -8,7 +8,7 @@ f
 **utilites
 **styled lists
 **icons
-**buttons 
+**buttons
 **common sections styles
 **light section
 **grey section
@@ -776,8 +776,8 @@ a > [class*="rt-icon-"],
   margin-left: -13px;
 }
 
-/* 
-**buttons 
+/*
+**buttons
 */
 .theme_button {
   font-size: 15px;
@@ -3350,7 +3350,7 @@ widget_pages
 /*
 **plugins
 */
-/* 
+/*
  *  Core Owl Carousel CSS File
  *  v1.3.3
  */
@@ -3424,7 +3424,7 @@ widget_pages
   /* Clickable class fix problem with hover on touch devices */
   /* Use it for non-touch hover action */
   /*
-  *   Owl Carousel Owl Demo Theme 
+  *   Owl Carousel Owl Demo Theme
   *   v1.3.3
   */
 }
@@ -4568,8 +4568,8 @@ easy pie chart
   margin-top: 0;
 }
 
-/* 
-totop 
+/*
+totop
 */
 #toTop {
   bottom: 20px;
