--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,7 +3,7 @@
     font-family: 'rt-icons';
     src:url('../fonts/rt-icons.eot');
     src:url('../fonts/rt-icons.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/rt-icons.woff') format('woff'),
+        url('../fonts/rt-icons.woff') format('font-woff'),
         url('../fonts/rt-icons.ttf') format('truetype'),
         url('../fonts/rt-icons.svg#rt-icons') format('svg');
     font-weight: normal;
@@ -444,34 +444,34 @@ a.socialico-aim:before {content: "Z";}
   }
 }
 */
- 
+
  [class^="arrow-icon-"]:before, [class*=" arrow-icon-"]:before {
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
   speak: none;
- 
+
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
- 
+
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-     
+
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
- 
+
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
   margin-left: .2em;
- 
+
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
- 
+
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
   text-shadow:none !important;
