--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <p>&copy; Copyright 2015 - Dance Studio Template </p>
+                    <p>&copy; Copyright 2017 - Compassos - Estúdio de dança </p>
                 </div>
             </div>
         </div>
