--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,48 +2,32 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <a class="navbar-brand text-center" href="#top">dance<span>studio</span></a>
+                <a class="navbar-brand text-center" href="#top">Compassos<span>Gyn</span></a>
                 <span id="toggle_mobile_menu"></span>
                 <nav id="mainmenu_wrapper">
                     <ul id="mainmenu" class="nav sf-menu">
                         <li class="active">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Principal</a>
                         </li>
                         <li>
-                            <a href="about.html">Pages</a>
+                            <a href="sobre.html">Páginas</a>
                             <ul>
                                 <li>
-                                    <a href="about.html">About Us</a>
+                                    <a href="sobre.html">Sobre nós</a>
                                 </li>
                                 <li>
-                                    <a href="service.html">Service</a>
+                                    <a href="service.html">Serviços</a>
                                 </li>
-                                 <li>
-                                    <a href="timetable.html">Timetable</a>
-                                </li>
-                                <li>
-                                    <a href="class-single.html">Single Class</a>
-                                </li>
-                                <li>
-                                    <a href="icons.html">Icons</a>
-                                </li>
-                                <li>
-                                    <a href="animation.html">Animation</a>
-                                </li>
-                                <li>
-                                    <a href="shortcodes.html">Shortcodes&amp;Widgets</a>
-                                </li>
-
                             </ul>
                         </li>
                         <li>
-                            <a href="gallery.html">Gallery</a>
+                            <a href="galeria.html">Galeria</a>
                         </li>
                         <li>
                             <a href="blog.html">Blog</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="contato.html">Contato</a>
                         </li>
                     </ul>
                 </nav>
