--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,13 @@
                                     <a href="sobre.html">Sobre nós</a>
                                 </li>
                                 <li>
-                                    <a href="service.html">Serviços</a>
+                                    <a href="aula-particular.html">Aula particular</a>
+                                </li>
+                                <li>
+                                    <a href="horarios.html">Horários</a>
+                                </li>
+                                <li>
+                                    <a href="serviços.html">Serviços</a>
                                 </li>
                             </ul>
                         </li>
