header order fix

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 
 
             <div class="col-md-3 col-sm-6 widget widget_recent_entries to_animate">
-                <h3 class="widget-title">useful links</h3>
+                <h3 class="widget-title">links úteis</h3>
                 <ul>
                     <li>
                         <a href="#">Lorem Ipsum is simply</a>
