translate single-class

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
                             <a href="serviços.html">Serviços</a>
                         </li>
                         <li>
-                            <a href="aula-particular.html">Aula particular</a>
+                            <a href="aulas-particulares.html">Aulas particulares</a>
                         </li>
                         <li>
                             <a href="horarios.html">Horários</a>
