--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <a class="navbar-brand text-center" href="#top">Compassos<span>Gyn</span></a>
+                <a class="navbar-brand text-center" href="index.html">Compassos<span>Gyn</span></a>
                 <span id="toggle_mobile_menu"></span>
                 <nav id="mainmenu_wrapper">
                     <ul id="mainmenu" class="nav sf-menu">
