--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+
 <header id="header">
     <div class="container">
         <div class="row">
@@ -6,30 +7,29 @@
                 <span id="toggle_mobile_menu"></span>
                 <nav id="mainmenu_wrapper">
                     <ul id="mainmenu" class="nav sf-menu">
-                        <li class="active">
+                        <li class="nav_highlight active">
                             <a href="index.html">Principal</a>
                         </li>
-                        <li>
+                        <li class="nav_highlight">
                             <a href="sobre.html">Sobre nós</a>
                         </li>
-                        <li>
+                        <li class="nav_highlight">
                             <a href="serviços.html">Serviços</a>
                         </li>
-                        <li>
+                        <li class="nav_highlight">
                             <a href="aulas-particulares.html">Aulas particulares</a>
                         </li>
-                        <li>
+                        <li class="nav_highlight">
                             <a href="horarios.html">Horários</a>
                         </li>
-                        <li>
+                        <li class="nav_highlight">
                             <a href="galeria.html">Galeria</a>
                         </li>
-                        <li>
+                        <li class="nav_highlight">
                             <a href="contato.html">Contato</a>
                         </li>
                     </ul>
                 </nav>
-
             </div>
         </div>
     </div>
