--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,25 +7,25 @@
                 <span id="toggle_mobile_menu"></span>
                 <nav id="mainmenu_wrapper">
                     <ul id="mainmenu" class="nav sf-menu">
-                        <li>
+                        <li id="highlight_index0">
                             <a href="index.html">Principal</a>
                         </li>
-                        <li>
+                        <li id="highlight_index1">
                             <a href="sobre.html">Sobre nós</a>
                         </li>
-                        <li>
+                        <li id="highlight_index2">
                             <a href="serviços.html">Serviços</a>
                         </li>
-                        <li>
+                        <li id="highlight_index3">
                             <a href="aulas-particulares.html">Aulas particulares</a>
                         </li>
-                        <li>
+                        <li id="highlight_index4">
                             <a href="horarios.html">Horários</a>
                         </li>
-                        <li>
+                        <li id="highlight_index5">
                             <a href="galeria.html">Galeria</a>
                         </li>
-                        <li>
+                        <li id="highlight_index6">
                             <a href="contato.html">Contato</a>
                         </li>
                     </ul>
