--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
                             <a href="sobre.html">Sobre nós</a>
                         </li>
                         <li id="highlight_index2">
-                            <a href="aulas-particulares.html">Aulas particulares</a>
+                            <a href="equipe.html">Equipe</a>
                         </li>
                         <li id="highlight_index3">
                             <a href="horarios.html">Horários</a>
