--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,10 +14,9 @@
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/fonts.css">
     <script src="js/vendore/modernizr-2.6.2.min.js"></script>
-
     <!--[if lt IE 9]>
         <script src="js/elvendor/html5shiv.min.js"></script>
         <script src="js/elvendor/respond.min.js"></script>
     <![endif]-->
-
+    <link rel="icon" type="image/jpg" href="img/logo.jpg" />
 </head>
