--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,38 @@
                         <li id="highlight_index1">
                             <a href="sobre.html">Sobre nós</a>
                         </li>
+                        <li id="highlight_index6">
+                            <a>Cursos</a>
+                            <ul>
+                                <li>
+                                    <a href="forro.html">Forró</a>
+                                </li>
+                                <li>
+                                    <a href="samba.html">Samba</a>
+                                </li>
+                                 <li>
+                                    <a href="zouk.html">Zouk</a>
+                                </li>
+                                <li>
+                                    <a href="bachata.html">Bachata</a>
+                                </li>
+                                <li>
+                                    <a href="soltinho.html">Soltinho</a>
+                                </li>
+                                <li>
+                                    <a href="samba-de-gafieira.html">Samba de gafieira</a>
+                                </li>
+                                <li>
+                                    <a href="tango.html">Tango</a>
+                                </li>
+                                <li>
+                                    <a href="dança-de-salão.html">Dança de salão</a>
+                                </li>
+                                <li>
+                                    <a href="ritmos-latinos.html">Ritmos latinos</a>
+                                </li>
+                            </ul>
+                        </li>
                         <li id="highlight_index2">
                             <a href="equipe.html">Equipe</a>
                         </li>
