--- a/_includes/pre_footer.html
+++ b/_includes/pre_footer.html
@@ -2,11 +2,7 @@
     <div class="container text-center">
         <div class="row">
             <header class="section_header text-center">
-              {% if page.title %}
-              <a href="horarios.html"><h2>Veja aqui nossos horários de {{ page.title }}</h2></a>
-              {% else %}
-              <a href="contato.html"><h2>Venha nos visitar para ter a sua melhor experiência de dança</h2></a>
-              {% endif %}
+              <a href="{{ page.pre_footer_link }}.html"><h2>{{ page.pre_footer_text }}</h2></a>
             </header>
         </div>
     </div>
