--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,16 @@
 
+<section id="copyright" class="dark_section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <p>&copy; Copyright 2017 - <strong> {{ site.title }} </strong></p>
+                <p>
+                  <strong>Telefone:</strong> {{ site.phone_number }}
+                </p>
+                <p>
+                  <strong>Email:</strong> <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
