--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
-                <p>&copy; Copyright 2017 - <strong> {{ site.title }} </strong></p>
+                <p>
+                  <strong>&copy; {{ site.title }} - 2017 </strong>
+                </p>
                 <p>
                   <strong>Telefone:</strong> {{ site.phone_number }}
                 </p>
