add margin header and margin index title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
 
 <header id="header">
+    <div class="margin_top_header">
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
