--- a/css/main.css
+++ b/css/main.css
@@ -4993,14 +4993,14 @@ isotope animations
   position: relative;
 }
 
-#welcome .welcome_cont:hover .welcome {
+/*#welcome .welcome_cont:hover .welcome {
   opacity: 1;
   -moz-transform: scale(1);
   -webkit-transform: scale(1);
   -o-transform: scale(1);
   -ms-transform: scale(1);
   transform: scale(1);
-}
+}*/
 
 @media (min-width: 767px) and (max-width: 991px) {
   #welcome .welcome i:after {
