--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,6 +45,9 @@
                                 <li>
                                     <a href="ritmos-latinos.html">Ritmos latinos</a>
                                 </li>
+                                <li>
+                                    <a href="salsa.html">Salsa</a>
+                                </li>
                             </ul>
                         </li>
                         <li id="highlight_index2">
