--- a/css/main.css
+++ b/css/main.css
@@ -1418,8 +1418,13 @@ a > [class*="rt-icon-"],
 /**dark section*/
 .dark_section {
   background-color: #1a1a1a;
-  color: #f5f5f5;
+  color: white;
 }
+
+.dark_section p {
+  color: #f36639;
+}
+
 .dark_section h1,
 .dark_section h2,
 .dark_section h3,
@@ -1445,7 +1450,7 @@ a > [class*="rt-icon-"],
   color: #f36639;
 }
 .dark_section a {
-  color: #ffffff;
+  color: #f36639;
 }
 .dark_section a:hover {
   color: #f36639;
@@ -5911,7 +5916,7 @@ article.comment-body {
 
 /*copyright*/
 #copyright {
-  background: #212f3d !important;
+  background: white !important;
 }
 
 /*# sourceMappingURL=main.css.map */
