footer strong text

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,10 +7,10 @@
                   <strong>&copy; {{ site.title }} - 2017 </strong>
                 </p>
                 <p>
-                  <strong>Telefone:</strong> {{ site.phone_number }}
+                  <strong>Telefone: {{ site.phone_number }}</strong>
                 </p>
                 <p>
-                  <strong>Email:</strong> <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+                  <strong>Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a></strong>
                 </p>
             </div>
         </div>
