--- a/css/main.css
+++ b/css/main.css
@@ -1450,10 +1450,10 @@ a > [class*="rt-icon-"],
   color: #f36639;
 }
 .dark_section a {
-  color: #f36639;
+  color: #b31414;
 }
 .dark_section a:hover {
-  color: #f36639;
+  color: #b31414;
 }
 .dark_section .theme_button {
   border-color: #ffffff;
