footer to one line

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,12 +5,10 @@
             <div class="col-sm-12 text-center ">
                 <p>
                   <strong>&copy; {{ site.title }} - 2017 </strong>
-                </p>
-                <p>
-                  Telefone:<strong> {{ site.phone_number }}</strong>
-                </p>
-                <p>
-                  Email: <strong><a href="mailto:{{ site.email }}">{{ site.email }}</a></strong>
+
+                  • Telefone:<strong> {{ site.phone_number }}</strong>
+
+                  • Email: <strong><a href="mailto:{{ site.email }}">{{ site.email }}</a></strong>
                 </p>
             </div>
         </div>
