change css for equipe page

--- a/css/main.css
+++ b/css/main.css
@@ -5622,7 +5622,7 @@ a.section-more:hover {
 }
 /*Single Class*/
 .classes h3 {
-  background-color: #f36639;
+  background-color: #b31414;
   font-size: 20px;
   margin: 0;
   padding: 24px 30px;
