fix galeria and change logo name

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <a class="margin_logo_top text-center col-sm-2" href="index.html"><img id="remove" src="img/Logo Compasso - Vermelho.png" alt=""></a>
+                <a class="margin_logo_top text-center col-sm-2" href="index.html"><img id="remove" src="img/Logo_Compasso_Vermelho.png" alt=""></a>
                 <span id="toggle_mobile_menu"></span>
                 <nav id="mainmenu_wrapper">
                     <ul id="mainmenu" class="nav sf-menu">
