--- a/css/main.css
+++ b/css/main.css
@@ -5964,3 +5964,11 @@ article.comment-body {
   width: 400px;
   margin-top: 30px;
 }
+
+
+.title_container_about {
+  margin: auto;
+  width: 500px;
+  height: 20px;
+  border-bottom: 3px solid #b31414;
+}
