--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <p>
                   <strong>&copy; {{ site.title }} - 2017 </strong>
 
-                  • Telefone:<strong> {{ site.phone_number }}</strong>
+                  • Telefone:<a href="tel:{{ site.phone_number }}"><strong> {{ site.phone_number }}</strong></a>
 
                   • Email: <strong><a href="mailto:{{ site.email }}">{{ site.email }}</a></strong>
                 </p>
