--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,5 +18,5 @@
         <script src="js/elvendor/html5shiv.min.js"></script>
         <script src="js/elvendor/respond.min.js"></script>
     <![endif]-->
-    <link rel="icon" type="image/jpg" href="img/logo.jpg" />
+    <link rel="icon" type="image/jpg" href="img/logo.png" />
 </head>
