--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,62 +5,64 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <a class="margin_logo_top text-center col-xs-10 col-sm-10 col-lg-2" href="index.html"><img id="remove" src="img/Logo_Compasso_Vermelho.png" alt=""></a>
+                <a class="margin_logo_top text-center col-xs-10 col-sm-10 col-lg-2" href="index">
+                  <img id="remove" src="img/Logo_Compasso_Vermelho.png" alt="">
+                </a>
                 <span id="toggle_mobile_menu"></span>
                 <nav id="mainmenu_wrapper">
                     <ul id="mainmenu" class="nav sf-menu">
                         <li id="highlight_index0">
-                            <a href="index.html">Principal</a>
+                            <a href="index">Principal</a>
                         </li>
                         <li id="highlight_index1">
-                            <a href="sobre.html">Sobre nós</a>
+                            <a href="sobre">Sobre nós</a>
                         </li>
                         <li id="highlight_index6">
                             <a>Cursos</a>
                             <ul>
                                 <li>
-                                    <a href="forro.html">Forró</a>
+                                    <a href="forro">Forró</a>
                                 </li>
                                 <li>
-                                    <a href="samba.html">Samba</a>
+                                    <a href="samba">Samba</a>
                                 </li>
                                  <li>
-                                    <a href="zouk.html">Zouk</a>
+                                    <a href="zouk">Zouk</a>
                                 </li>
                                 <li>
-                                    <a href="bachata.html">Bachata</a>
+                                    <a href="bachata">Bachata</a>
                                 </li>
                                 <li>
-                                    <a href="soltinho.html">Soltinho</a>
+                                    <a href="soltinho">Soltinho</a>
                                 </li>
                                 <li>
-                                    <a href="samba-de-gafieira.html">Samba de gafieira</a>
+                                    <a href="samba-de-gafieira">Samba de gafieira</a>
                                 </li>
                                 <li>
-                                    <a href="tango.html">Tango</a>
+                                    <a href="tango">Tango</a>
                                 </li>
                                 <li>
-                                    <a href="dança-de-salão.html">Dança de salão</a>
+                                    <a href="dança-de-salão">Dança de salão</a>
                                 </li>
                                 <li>
-                                    <a href="ritmos-latinos.html">Ritmos latinos</a>
+                                    <a href="ritmos-latinos">Ritmos latinos</a>
                                 </li>
                                 <li>
-                                    <a href="salsa.html">Salsa</a>
+                                    <a href="salsa">Salsa</a>
                                 </li>
                             </ul>
                         </li>
                         <li id="highlight_index2">
-                            <a href="equipe.html">Equipe</a>
+                            <a href="equipe">Equipe</a>
                         </li>
                         <li id="highlight_index3">
-                            <a href="horarios.html">Horários</a>
+                            <a href="horarios">Horários</a>
                         </li>
                         <li id="highlight_index4">
-                            <a href="galeria.html">Galeria</a>
+                            <a href="galeria">Galeria</a>
                         </li>
                         <li id="highlight_index5">
-                            <a href="contato.html">Contato</a>
+                            <a href="contato">Contato</a>
                         </li>
                     </ul>
                 </nav>
