--- a/_includes/pre_footer.html
+++ b/_includes/pre_footer.html
@@ -2,7 +2,7 @@
     <div class="container text-center">
         <div class="row">
             <header class="section_header text-center">
-              <a href="{{ page.pre_footer_link }}.html"><h2>{{ page.pre_footer_text }}</h2></a>
+              <a href="{{ page.pre_footer_link }}"><h2>{{ page.pre_footer_text }}</h2></a>
             </header>
         </div>
     </div>
