--- a/css/main.css
+++ b/css/main.css
@@ -5975,6 +5975,10 @@ article.comment-body {
   margin-top: 30px;
 }
 
+.max_text_events {
+  height: 180px;
+}
+
 
 .title_container_about {
   margin: auto;
